--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,13 +1,14 @@
-# Добавляем исполняемый файл для тестов
-add_executable(test_database test_database.cpp)
+# Указываем явный путь к исходникам
+add_executable(test_database 
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_database.cpp
+)
 
-# Линкуем с нашей библиотекой и зависимостями
 target_link_libraries(test_database 
     database_lib 
     SQLite::SQLite3 
-    Catch2)
+    Catch2
+)
 
-# Регистрируем тест для CTest
 add_test(
     NAME database_tests
     COMMAND test_database
