--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,15 @@
-# Вариант 1: Используем Catch2 как header-only библиотеку
-add_library(Catch2 INTERFACE)
-target_include_directories(Catch2 INTERFACE 
-    ${CMAKE_CURRENT_SOURCE_DIR}/Catch2/single_include
+# Скачиваем Catch2 автоматически
+include(FetchContent)
+FetchContent_Declare(
+  Catch2
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG        v3.4.0
 )
+FetchContent_MakeAvailable(Catch2)
 
 add_executable(test_database test_database.cpp)
-target_link_libraries(test_database 
-    database_lib 
-    SQLite::SQLite3 
-    Catch2
+target_link_libraries(test_database
+    database_lib
+    SQLite::SQLite3
+    Catch2::Catch2WithMain  # Автоматически подключит заголовки
 )
