--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(FurAuction)
+project(FurAuction LANGUAGES C)  # Явно указываем язык
 
 # Настройки компиляции
 set(CMAKE_C_STANDARD 11)
@@ -9,10 +9,12 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage")
 find_package(SQLite3 REQUIRED)
 
 # Основная библиотека
-add_library(database_lib src/database.c)
-target_link_libraries(database_lib SQLite::SQLite3)
+add_library(database_lib STATIC src/database.c)
+target_include_directories(database_lib PUBLIC 
+    ${CMAKE_SOURCE_DIR}/includes
+)
+target_link_libraries(database_lib PRIVATE SQLite::SQLite3)
 
 # Включение тестов
 enable_testing()
 add_subdirectory(tests)
-
