--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,23 +7,22 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(Catch2)
 
-# Объекты для тестов
-add_library(database_objects OBJECT ../src/database.c)
-target_include_directories(database_objects PRIVATE ../includes)
-
-# Исполняемый файл тестов
+# Исполняемый файл тестов (БЕЗ повторной компиляции database.c)
 add_executable(test_database
     test_database.cpp
-    $<TARGET_OBJECTS:database_objects>
 )
 
-# Настройки линковки
+# Линкуем с нашей библиотекой и зависимостями
 target_link_libraries(test_database
     PRIVATE
-    SQLite::SQLite3
+    database_lib       # Используем уже скомпилированную библиотеку
+    SQLite::SQLite3    # SQLite3 уже есть в database_lib, но можно оставить для явности
     Catch2::Catch2WithMain
-    gcov  # Важно: добавляем gcov явно
+    gcov
 )
+
+# Добавляем путь к заголовочным файлам
+target_include_directories(test_database PRIVATE ${CMAKE_SOURCE_DIR}/includes)
 
 # Добавляем тест в CTest
 add_test(NAME database_tests COMMAND test_database)
